--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>unnat</title>
        
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
         <link href="https://fonts.google.com/specimen/Josefin+Sans?query=jos&preview.text_type=custom">
         <link
     rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
