--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="logo"><h1 class="animated infinite heartBeat">Its Lohardaga</h1></div>
                 <div class="menu">
                     <a href="#">Home</a>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="./gallery.html">Gallery</a>
                     <a href="https://lohardaga.nic.in/">About</a>
                     <a href="#">Contact</a>
                    
