--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
     <body>
         <h1> Image Gallery </h1>
         <div class="gallery">
-          <a href="./asset./image2.jpg"><img src="./asset.img2.jpg"></a>
+          <a href="./asset./image2.jpg"><img src="./asset./img2.jpg"></a>
           <a href="./asset./image3.jpg"> <img src="./asset./img31.jpg"></a>
            <a href="./asset./image9.jpg"> <img src="./asset./img9.jpg"></a>
            <a href="./asset./image10.jpg"> <img src="./asset./img10.jpg"></a>
