--- a/gallery.html
+++ b/gallery.html
@@ -8,8 +8,8 @@
     <body>
         <h1> Image Gallery </h1>
         <div class="gallery">
-          <a href="./asset/img./image2.jpg"><img src="./asset/img./img2.jpg"></a>
-          <a href="./asset/image3.jpg"> <img src="./asset/img31.jpg"></a>
+          <a href="./asset/img/image2.jpg"><img src="./asset/img/img2.jpg"></a>
+          <a href="./asset/img/image3.jpg"> <img src="./asset/img/img31.jpg"></a>
            <a href="./asset/img/image9.jpg"> <img src="./asset/img/img9.jpg"></a>
            <a href="./asset/img/image10.jpg"> <img src="./asset/img/img10.jpg"></a>
            <a href="./asset/img/image12.jpg"> <img src="./asset/img/img12.jpg"></a>
